# locale-hs

./: .travis.yml  env-locale.cabal
System/Locale/: Current.hs
cbits/: glue.c
