Name:                env-locale
Version:             1.0.0.0
Synopsis:            A (non-forking) interface to the current locale
Description:         A sane way to get the time locale defined by environment
Homepage:            https://github.com/Ongy/locale-hs
License:             LGPL
License-file:        LICENSE
Author:              Markus Ongyerth
Maintainer:          Markus Ongyerth <ongy@ongy.net>
Stability:           Alpha
Category:            System
Build-type:          Simple
Cabal-version:       >=1.10

Source-repository head
  type:       git
  location:   https://github.com/Ongy/locale-hs



Library
  Exposed-modules:   System.Locale.Current
  default-language:  Haskell2010
  Build-depends:     base >=4 && <5, old-locale
  
  Ghc-options:       -Wall -fwarn-tabs
  c-sources:         cbits/glue.c
